# hp_detection

./: .Z.cuhk_data.HPACG_dataHPACG_split..pkl  .dockerignore  .gitignore  .gitmodules  CHIEF.ipynb  CONCH_v1_5.ipynb  Dockerfile  H-Optimus-0.ipynb  H-optimus-1.ipynb  MUSK.ipynb  README.md  RESTNET50.ipynb  RESTNET50_from_timm.ipynb  check_virchow2_backbone_diff.ipynb  collect_data.py  custom_draw_attn.py  dev.ipynb  dev.py  dev2.ipynb  downstream_logreg.py  draw_attn.py  draw_attn_mask.ipynb  fine-tune.py  get_CHIEF_feats.py  get_attn_mask.py  get_feats.py  get_feats.sh  get_model.ipynb  get_model.py  helpers.py  list_of_removed_image_1.pkl  plot.py  pyproject.toml  qa.py  readme.md  requirements-docker.txt  run_fine_tune.sh  template.ipynb  test.py  uni_v1.ipynb
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
scripts/: export_predictions_csv.py  pkl_to_csv.py  plot_confusion_matrices.py  test_gpu.py
src/: processing.py
